# sparky

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.hpp  Game.hpp  SceneManager.hpp
include/entities/: Laser.hpp  Spaceship.hpp  UFO.hpp
include/scenes/: EndScene.hpp  PlayScene.hpp  PlayScreen.hpp  Scene.hpp  Screen.hpp  StartScene.hpp  StartScreen.hpp
src/: SceneManager.cpp  main.cpp
src/entities/: Laser.cpp  Spaceship.cpp  UFO.cpp
src/scenes/: EndScene.cpp  PlayScene.cpp  StartScene.cpp
